[package]
name = "zzzzzzzzzzz"
version = "1.0.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
csv = "1.3.1"
num-bigint = { version = "0.4.6", features = ["serde"] }
fake = { version = "4.4.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
kanal = "0.1.1"
paste = "1.0.15"
